fixed form and delete styling for blurred background and better alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,27 +39,66 @@ a {
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 400px;
-  height: 450px;
+  width: 370px;
+  height: 350px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: white;
+  background: rgba(255, 255, 255, 0.5);
   border-radius: 10px;
+  backdrop-filter: blur(10px);
 }
-.hide {
-  display: none;
+fieldset {display:flex;
+  flex-direction: column;
+  height: 200px;
 }
-fieldset {
-  height: 400px;
+
+
+fieldset input{
+  border-radius: 3px;
+  border:1px solid rgb(46, 39, 139);
+  margin:5px;
+}
+
+.button-section{
+  display:flex;
+  justify-content:flex-end;
+  margin-top: 20px;
+}
+.button-section input{
+  background: white;
+  border:1px solid rgb(46, 39, 139);
 }
 
 .book-inputs {
   display: flex;
   justify-content: space-between;
+
+
 }
+
+
+.delete-container {
+  position: fixed;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(10px);
+  padding: 10px;
+  border-radius: 10px;
+}
+.hide {
+  display: none;
+}
+
+
 .main-content {
-  grid-column:1/4;
+  grid-column: 1/4;
   display: grid;
   grid-template-columns: 2fr 1fr;
   background-color: rgb(211, 216, 219);
@@ -147,8 +186,8 @@ fieldset {
   justify-content: flex-end;
   padding-right: 10px;
 }
-.card-buttons img{
-  height:30px
+.card-buttons img {
+  height: 30px;
 }
 .object-property-value {
   display: grid;
